data/derived/comb/progs/unify/prog5106.ml.out
Characters 65-66:
  | h::t  -> if k h then v else assoc (d,k,t);;
                ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
